# Glimpse

./: CMakeLists.txt  README.md
.github/workflows/: build.yml  release.yml
src/: main.cpp
src/app/: info.hpp  usage.cpp  usage.hpp
src/image/: image_displayer.cpp  image_displayer.hpp  image_format.cpp  image_format.hpp  image_info.cpp  image_info.hpp  image_reader.cpp  image_reader.hpp  image_utils.cpp  image_utils.hpp
src/other/: math2d.cpp  math2d.hpp
src/sdl/: displayer.cpp  displayer.hpp  window.cpp  window.hpp
